doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\jesus\Desktop\Repositorios\scribble
-d
C:\Users\jesus\Desktop\Repositorios\scribble\doc
-encoding
windows-1252
-charset
windows-1252
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\jesus\Desktop\Repositorios\scribble\DrawDemo.java
<---- end of javadoc command ---->
Loading source file C:\Users\jesus\Desktop\Repositorios\scribble\DrawDemo.java...
C:\Users\jesus\Desktop\Repositorios\scribble\DrawDemo.java:60: error: <identifier> expected
            pen.
                ^
C:\Users\jesus\Desktop\Repositorios\scribble\DrawDemo.java:60: error: not a statement
            pen.
               ^
C:\Users\jesus\Desktop\Repositorios\scribble\DrawDemo.java:67: error: illegal start of expression
    private void square(Pen pen)
    ^
C:\Users\jesus\Desktop\Repositorios\scribble\DrawDemo.java:67: error: illegal start of expression
    private void square(Pen pen)
            ^
C:\Users\jesus\Desktop\Repositorios\scribble\DrawDemo.java:67: error: ';' expected
    private void square(Pen pen)
                       ^
C:\Users\jesus\Desktop\Repositorios\scribble\DrawDemo.java:67: error: ';' expected
    private void square(Pen pen)
                               ^
C:\Users\jesus\Desktop\Repositorios\scribble\DrawDemo.java:78: error: illegal start of expression
    public void colorScribble()
    ^
C:\Users\jesus\Desktop\Repositorios\scribble\DrawDemo.java:78: error: illegal start of expression
    public void colorScribble()
           ^
C:\Users\jesus\Desktop\Repositorios\scribble\DrawDemo.java:78: error: ';' expected
    public void colorScribble()
                             ^
C:\Users\jesus\Desktop\Repositorios\scribble\DrawDemo.java:96: error: illegal start of expression
    public void clear()
    ^
C:\Users\jesus\Desktop\Repositorios\scribble\DrawDemo.java:96: error: illegal start of expression
    public void clear()
           ^
C:\Users\jesus\Desktop\Repositorios\scribble\DrawDemo.java:96: error: ';' expected
    public void clear()
                     ^
C:\Users\jesus\Desktop\Repositorios\scribble\DrawDemo.java:101: error: reached end of file while parsing
}
 ^
13 errors
